--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ body {
     background-size: 100% 2px;
 }
 .login::after{
-    padding-bottom: 22px;
+    padding-bottom: 16px;
     content: "";
     position: absolute;
     top: 50%;
@@ -85,7 +85,7 @@ body {
     width: 31px;
     height: 40px;
     transform: translateY(-50%);
-    background-image: url('/img/icon/684809\ 1.svg');
+    background-image: url('./../img/icon/material-symbols_location-on-outline.svg');
     background-repeat: no-repeat;
     }
 
